@@ -1,5 +1,8 @@
 version 0.1.3
-- fixed issue where comparing factors with characters would cause a crash (thanks to Max Kuhn)
+- gower_dist now returns numeric(0) invisibly when there are no columns to compare.
+- gower_topn now returns a list with empty matrices when there are no columns to compare.
+- gower_topn now warns when n>nrow(y) and sets n=nrow(y)
+- bugfix: comparing factors with characters would cause a crash (thanks to Max Kuhn)
 
 version 0.1.2
 - fixed valgrind warning
